--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -8,6 +8,94 @@ $colors: (
   offset: #19bc8b
 );
 
+$enable-responsive-font-sizes: true;
+
+$font-size-base: 1rem;
+$h2-font-size: 2rem;
+
+@mixin rwd($breakpoint) {
+  @if $breakpoint=="xl" {
+    @media all and (min-width: 1201px) {
+      @content;
+    }
+  }
+  @if $breakpoint=="lg" {
+		@media all and (min-width: 992px) and (max-width: 1200px) {
+			@content;
+		}
+  }
+  @else if $breakpoint=="md" {
+		@media all and (min-width: 768px) and (max-width: 991px) {
+			@content;
+		}
+  }
+  @else if $breakpoint=="sm" {
+		@media all and (min-width: 576px) and (max-width: 767px) {
+			@content;
+		}
+  }
+  @else if $breakpoint=="ssm" {
+		@media all and (min-width: 375px) and (max-width: 575px) {
+			@content;
+		}
+  }
+  @else if $breakpoint==""{
+    @media all and (max-width: 374px) {
+			@content;
+		}
+  }
+}
+
+
+.header{
+  .navbar-brand{
+    @include rwd(''){
+      font-size: 1rem;
+    }
+    @include rwd(md){
+      font-size: 1.25rem;
+    }
+    @include rwd(lg){
+      font-size: 1.5rem;
+    }
+    @include rwd(xl){
+      font-size: 1.5rem;
+    }
+    img{
+      width: 50px;
+      @include rwd(sm){
+        width: 70px;
+      }
+      @include rwd(md){
+        width: 90px;
+      }
+      @include rwd(lg){
+        width: 90px;
+      }
+      @include rwd(xl){
+        width: 90px;
+      }
+    }
+  }
+}
+
+
+.section1-item{
+  max-width: 8rem;
+}
+
+.section1-item-icon{
+  height: 7rem;
+}
+
+.activity{
+  display: none;
+}
+
+.weather{
+  display: none;
+}
+
 @each $button, $color in $colors {
   .#{$button} {
     --color: #{$color};
@@ -19,30 +107,10 @@ body{
   text-align: center;
 }
 
-.portal{
-  height: 100vh;
-}
 
 a{
   display: block;
   text-decoration: none;
 }
 
-.portal-container-card{
-  background-color: #ff8c8c;
-}
 
-.card-title{
-  font-weight: bolder;
-  cursor: default;
-}
-
-.card-subtitle{
-  font-weight: bolder;
-  color: black;
-  background-color: white;
-  &:hover{
-    color: white;
-    background-color: #fa4646;
-  }
-}
