--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -88,11 +88,11 @@ $h2-font-size: 2rem;
 }
 
 
-.section1-item{
-  max-width: 8rem;
+.section-item{
+  max-width: 7rem;
 }
 
-.section1-item-icon{
+.section-item-icon{
   height: 7rem;
 }
 
