--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -15,12 +15,12 @@ $colors: (
   }
 };
 a {  
-  color: var(--color);
+  // color: var(--color);
   transition: .5s;
   &:hover,
   &:focus { 
     border-color: var(--hover);
-    color: #E9E9E9;
+    // color: #E9E9E9;
     button{
       background-color: $gray-100;
       color: var(--color);
@@ -272,6 +272,15 @@ h6{
 // }
 
 
+.Isometric{
+  max-width: 100%;
+  width: 230px;
+  height: 230px;
+}
+
+.border-4{
+  border: 4px solid #2B8099;
+}
 
 .navbar-brand{
   @include rwd(''){
@@ -318,16 +327,10 @@ h6{
   }
 }
 
-
-
 .section-item-icon{
   width: 7rem;
   height: 7rem;
 }
-
-// .activity{
-//   display: none;
-// }
 
 .weather{
   display: none;
@@ -348,6 +351,61 @@ a{
   }
 }
 
+.w-unset{
+  width: unset;
+}
+
+.text-white {
+  color: #fff;
+}
+.hover-blur a {
+  display: block;
+  position: relative;
+  overflow: hidden;
+}
+.hover-blur img {
+  transform: scale(.8);
+  transition: all 0.5s ease-in-out;
+}
+.hover-blur:hover img {
+  transform: scale(1);
+  filter: grayscale(0.6) blur(1px);
+}
+.hover-blur a h2 {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) scale(.8);
+  margin-top: 0px;
+  margin-bottom: 0px;
+  width: 230px;
+  height: 230px;
+  border-radius: 100%;
+  text-align: center;
+  background-color: rgba(0,0,0,0.5);
+  /*background dotted*/
+  transition: all 0.5s linear;
+  filter: alpha(opacity=0);
+  opacity: 0;
+}
+.hover-blur:hover a h2 {
+  // transform: translateX(-50%) scale(1);
+  filter: alpha(opacity=100);
+  opacity: 1;
+}
+.hover-blur .text-white {
+  transform: scale(0);
+  transition: all 0.5s linear;
+  line-height: 230px;
+  opacity: 0;
+}
+.hover-blur:hover .text-white {
+  transform: scale(1);
+  transition: all 0.5s linear;
+  
+  opacity: 1;
+}
 
 
 
