--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -14,6 +14,7 @@ $colors: (
     --hover: #{adjust-hue($color, 10deg)};
   }
 };
+
 a {  
   // color: var(--color);
   transition: .5s;
@@ -65,15 +66,15 @@ $h2-font-size: 2rem;
 			@content;
 		}
   }
-  @else if $breakpoint==""{
+  @else if $breakpoint=="" {
     @media all and (max-width: 374px) {
 			@content;
 		}
   }
 }
 
-.opacity{
-  a:nth-child(2n){
+.text-center {
+  a:nth-child(2n) {
     @include rwd(''){
       background-color: mintcream;
     }
@@ -110,13 +111,23 @@ $h2-font-size: 2rem;
   }
 }
 
-
-
-.opacity{
-  background-color: #f8f9faad,
+.opacity {
+  background-color: #f8f9faad;
+}
+.more {
+  display: none;
+  @include rwd(md){
+    display: inline;
+  }
+  @include rwd(lg){
+    display: inline;
+  }
+  @include rwd(xl){
+    display: inline;
+  }
 }
 
-#container{
+#container {
   display: block;
   position: fixed;
   top: 0;
@@ -124,14 +135,14 @@ $h2-font-size: 2rem;
   z-index: -9999;
 }
 
-p{  
+p {  
   // color: var(--color);
   transition: 0.25s;
   margin: 0;
   padding: 0;
 }
 
-.btn{
+.btn {
   display: inline-block;
   font-weight: 400;
   line-height: 1.5;
@@ -155,7 +166,7 @@ p{
 }
 
 
-.btn2{
+.btn2 {
   display: inline-block;
   font-weight: 400;
   line-height: 1.5;
@@ -181,231 +192,252 @@ p{
   }
 }
 
-
-// a{
-//   // color: var(--color);
-//   background-color: transparent;
-//   border: 1px solid transparent;
-//   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-//   &:hover,
-//   &:focus {
-//     background-color: var(--hover); 
-//     // background-color: $gray-100;
-//     border-color: var(--hover);
-//     // color: var(--color);
-//   }
-// }
-h1{
+h1, h2, h3, h4, h5, h6, p {
   color: var(--color);
   font-weight: bold;
+  cursor: context-menu;
 }
 
-h2{
-  color: var(--color);
-  font-weight: bold;
-}
-
-h3{
-  color: var(--color);
-  font-weight: bold;
-}
-
-h4{
-  color: var(--color);
-  font-weight: bold;
-}
-
-h5{
-  color: var(--color);
-  font-weight: bold;
-}
-
-h6{
-  color: var(--color);
-  font-weight: bold;
+.marquee {
+  width: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+  box-sizing: border-box;
+  span {
+    display: inline-block;
+    width: max-content;
+    background-color: mintcream;
+    font-weight: 700;
+    padding-left: 100%;
+    /* show the marquee just outside the paragraph */
+    will-change: transform;
+    animation: marquee 30s linear infinite;
+    &:hover {
+      animation-play-state: paused
+    }
+  }
 }
 
 
-.nav-wrapper{
+@keyframes marquee {
+  0% { transform: translate(50%, 0); }
+  100% { transform: translate(-100%, 0); }
+}
+
+
+/* Respect user preferences about animations */
+
+@media (prefers-reduced-motion: reduce) {
+  .marquee span {
+    animation-iteration-count: 1;
+    animation-duration: 0.01; 
+    /* instead of animation: none, so an animationend event is 
+     * still available, if previously attached.
+     */
+    width: auto;
+    padding-left: 0;
+  }
+}
+
+.nav-wrapper {
   min-width: 184px;
   position: relative;
   background-size: 4rem auto;
   background-repeat: no-repeat;
 }
 
-.nav-bg{
-  @include rwd(''){
+.nav-bg {
+  @include rwd('') {
     display: none;
   }
-  @include rwd(ssm){
+  @include rwd(ssm) {
     display: none;
   }
-  @include rwd(sm){
+  @include rwd(sm) {
     display: none;
   }
-  @include rwd(md){
+  @include rwd(md) {
     display: none;
   }
-  @include rwd(lg){
+  @include rwd(lg) {
     display: flex;
   }
-  @include rwd(xl){
+  @include rwd(xl) {
     display: flex;
   }
 }
 
-// .box:before{
-//   content: '';
-//   position:absolute;
-//   top:0;
-//   left:-100%;
-//   width:100%;
-//   height:100%;
-//   background: rgba(255,255,255,0.1);
-//   transition:0.5s;
-//   pointer-events: none;
+// .bg-img {
+//   background-image: url(../img/watercolor-background.jpg);
+//   background-repeat: no-repeat;
+//   background-size: contain;
 // }
 
-// .box:hover:before{
-//   left:-50%;
-//   transform: skewX(-5deg);
-// }
-
-
-.Isometric{
+.Isometric {
   max-width: 100%;
   width: 230px;
   height: 230px;
 }
 
-.border-4{
+.border-4 {
   border: 4px solid #2B8099;
 }
 
-.navbar-brand{
-  @include rwd(''){
-    font-size: 1rem;
-  }
-  @include rwd(md){
-    font-size: 1.25rem;
-  }
-  @include rwd(lg){
-    font-size: 1.5rem;
-  }
-  @include rwd(xl){
-    font-size: 1.5rem;
-  }
-  img{
-    width: 50px;
-    @include rwd(sm){
-      width: 70px;
+.navbar-brand {
+  // @include rwd('') {
+  //   font-size: 1rem;
+  // }
+  // @include rwd(md) {
+  //   font-size: 1.25rem;
+  // }
+  // @include rwd(lg) {
+  //   font-size: 1.5rem;
+  // }
+  // @include rwd(xl) {
+  //   font-size: 1.5rem;
+  // }
+  img {
+    width: 100%;
+    @include rwd(sm) {
+      width: 350px;
     }
-    @include rwd(md){
-      width: 90px;
+    @include rwd(md) {
+      width: 350px;
     }
-    @include rwd(lg){
-      width: 90px;
+    @include rwd(lg) {
+      width: 350px;
     }
-    @include rwd(xl){
-      width: 90px;
+    @include rwd(xl) {
+      width: 350px;
     }
   }
 }
 
 .btn-group{
-  @include rwd(''){
+  @include rwd('') {
     display: block;
   }
-  @include rwd(md){
+  @include rwd(md) {
     display: block;
   }
-  @include rwd(lg){
+  @include rwd(lg) {
     display: none;
   }
-  @include rwd(xl){
+  @include rwd(xl) {
     display: none;
   }
 }
 
-.section-item-icon{
+.section-item-icon {
   width: 7rem;
   height: 7rem;
 }
 
-.weather{
+.item4-icon {
+  width: 6rem;
+  height: 6rem;
+}
+
+.weather {
   display: none;
 }
 
 
-.bi-alarm{
+.bi-alarm {
   font-size: 2rem;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-.card-text{
+.card-text {
   a{
     display: inline-block;
   }
 }
 
-.w-unset{
+.w-unset {
   width: unset;
 }
 
 .text-white {
   color: #fff;
 }
-.hover-blur a {
-  display: block;
-  position: relative;
-  overflow: hidden;
+
+.hover-blur {
+  a {
+    display: block;
+    position: relative;
+    overflow: hidden;
+    h2 {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%) scale(.8);
+      margin-top: 0px;
+      margin-bottom: 0px;
+      width: 230px;
+      height: 230px;
+      border-radius: 100%;
+      text-align: center;
+      background-color: rgba(0,0,0,0.5);
+      /*background dotted*/
+      transition: all 0.5s linear;
+      filter: alpha(opacity=0);
+      opacity: 0;
+      @include rwd('') {
+        opacity: 1;
+      }
+      @include rwd('ssm') {
+        opacity: 1;
+      }
+      @include rwd('sm') {
+        opacity: 1;
+      }
+      .text-white{
+        transform: scale(0);
+        transition: all 0.5s linear;
+        line-height: 230px;
+        opacity: 0;
+        @include rwd('') {
+          opacity: 1;
+        }
+        @include rwd('ssm') {
+          opacity: 1;
+        }
+        @include rwd('sm') {
+          opacity: 1;
+        }
+      }
+    }
+  }
+  img {
+    transform: scale(.8);
+    transition: all 0.5s ease-in-out;
+  }
+  &:hover{
+    img {
+      transform: scale(1);
+      filter: grayscale(0.6) blur(1px);
+    }
+    a {
+      h2 {
+        filter: alpha(opacity=100);
+        opacity: 1;
+        .text-white {
+          transform: scale(1);
+          transition: all 0.5s linear;
+          opacity: 1;
+        }
+      }
+    }
+  }
 }
-.hover-blur img {
-  transform: scale(.8);
-  transition: all 0.5s ease-in-out;
-}
-.hover-blur:hover img {
-  transform: scale(1);
-  filter: grayscale(0.6) blur(1px);
-}
-.hover-blur a h2 {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%) scale(.8);
-  margin-top: 0px;
-  margin-bottom: 0px;
-  width: 230px;
-  height: 230px;
-  border-radius: 100%;
-  text-align: center;
-  background-color: rgba(0,0,0,0.5);
-  /*background dotted*/
-  transition: all 0.5s linear;
-  filter: alpha(opacity=0);
-  opacity: 0;
-}
-.hover-blur:hover a h2 {
-  // transform: translateX(-50%) scale(1);
-  filter: alpha(opacity=100);
-  opacity: 1;
-}
-.hover-blur .text-white {
-  transform: scale(0);
-  transition: all 0.5s linear;
-  line-height: 230px;
-  opacity: 0;
-}
-.hover-blur:hover .text-white {
-  transform: scale(1);
-  transition: all 0.5s linear;
-  
-  opacity: 1;
-}
+
+
+
 
 
 
