--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -505,7 +505,12 @@ a {
 
 .search {
   max-width: 100%;
-  width: 48px;
+  width: 44px;
+  transform: scale(1);
+  transition: all 0.3s ease-in-out;
+  &:hover {
+    transform: scale(1.2);
+  }
 }
 
 
