--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -15,7 +15,6 @@ $colors: (
   }
 };
 
-
 @mixin rwd($breakpoint) {
   @if $breakpoint=="xl" {
     @media all and (min-width: 1201px) {
@@ -81,72 +80,29 @@ a {
       }
     }
   }
-
 }
 
-$grid-gutter-width: 2rem;
-
-// number of cards per line for each breakpoint
-$cards-per-line: (
-    xs: 1,
-    sm: 2,
-    md: 3,
-    lg: 4,
-    xl: 5,
-);
-
-@each $name, $breakpoint in $grid-breakpoints {
-	@media (min-width: $breakpoint) {
-		.card-deck .card {
-			flex: 0 0 calc(#{100/map-get($cards-per-line, $name)}% - #{$grid-gutter-width});
-		}
-	}
-}
-
-.card-deck {
-  .card {
-    @include rwd('tiny'){
-      flex: 0 0 calc(100% - 2rem);
-    }
-    @include rwd('ssm'){
-      flex: 0 0 calc(50% - 2rem);
-    }
-    &:hover {
-      border-color: #0a58ca;
-    }
+.fill:hover,
+.fill:focus {
+  @include rwd('md') {
+    box-shadow: inset 0 0 0 10rem var(--hover);
   }
-}
-
-.card {
-  opacity: .8;
-}
-
-.card-body {
-  @include rwd('tiny'){
-    padding: 0;
+  @include rwd('lg') {
+    box-shadow: inset 0 0 0 9rem var(--hover);
   }
-  @include rwd('ssm'){
-    padding: 0;
+  @include rwd('xl') {
+    box-shadow: inset 0 0 0 9rem var(--hover);
   }
-  @include rwd('sm'){
-    padding: 0;
-  }
+  
 }
-
 
 html, body {
   height: 100%;
   margin: 0;
-  padding: 0;
 }
-
 body {
   display: flex; /*使物件依序排列*/
   flex-direction: column; /*使物件垂直排列*/
-  background-image: url(../img/background5.svg);
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
 }
 
 .wrapper {
@@ -160,19 +116,30 @@ body {
 }
 
 
+
 .text-center {
+  a {
+    @include rwd(tiny){
+      flex: 0 0 auto;
+      width: 100%;
+    }
+    @include rwd(ssm){
+      flex: 0 0 auto;
+      width: 50%;
+    }
+  }
   a:nth-child(2n) {
-    @include rwd('tiny'){
+    @include rwd(tiny){
       background-color: mintcream;
     }
     @include rwd(ssm){
-      background-color: mintcream;
+      background-color: unset;
     }
     @include rwd(sm){
       background-color: unset;
     }
     @include rwd(md){
-      background-color: unset;
+      background-color: mintcream;
     }
     @include rwd(lg){
       background-color: mintcream;
@@ -183,17 +150,23 @@ body {
   }
   
   a:nth-child(2), a:nth-child(3), a:nth-child(6), a:nth-child(7){
+    @include rwd(ssm) {
+      background-color: mintcream;
+    }
     @include rwd(sm){
       background-color: mintcream;
     }
-    @include rwd(md){
-      background-color: mintcream;
-    }
+    // @include rwd(md){
+    //   background-color: mintcream;
+    // }
   }
   a:nth-child(1) {
     border-radius: 30px 0 0 0;
   }
   a:nth-child(3) {
+    @include rwd(md) {
+      border-radius: 0 30px 0 0; 
+    }
     @include rwd(lg) {
       border-radius: 0 30px 0 0; 
     }
@@ -202,10 +175,10 @@ body {
     }
   }
   a:nth-child(2) {
-    @include rwd(sm){
+    @include rwd(ssm) {
       border-radius: 0 30px 0 0;
     }
-    @include rwd(md){
+    @include rwd(sm){
       border-radius: 0 30px 0 0;
     }
   }
@@ -241,16 +214,33 @@ p {
   padding: 0;
 }
 
-.inside-title {
-  display: inline-block;
-  background-color: aliceblue;
-  border-radius: 8px
-}
-
-.btn2 {
+.btn {
   display: inline-block;
   font-weight: 400;
   line-height: 1.5;
+  color: var(--color);
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  user-select: none;
+  background-color: transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1.2rem;
+  border-radius: 0.25rem;
+  transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
+  // &:hover{
+  //   background-color: var(--hover); 
+  //   color: white;
+  // }
+}
+
+
+.btn2 {
+  display: inline-block;
+  height: 70px;
+  font-weight: 400;
+  line-height: 1.2;
   color: $gray-100;
   text-align: center;
   text-decoration: none;
@@ -259,8 +249,8 @@ p {
   user-select: none;
   background-color: var(--color);
   border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
-  font-size: 1.5rem;
+  padding: 0.6rem 0.6rem;
+  font-size: 1.2rem;
   border-radius: 0.25rem;
   transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out, border-color 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
   @include rwd(md){
@@ -289,61 +279,95 @@ h1, h2, h3, h4, h5, h6, p {
   cursor: context-menu;
 }
 
-.nav-wrapper {
-  min-width: 184px;
-  position: relative;
-  background-size: 4rem auto;
-  background-repeat: no-repeat;
+.marquee {
+  width: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+  box-sizing: border-box;
+  span {
+    display: inline-block;
+    width: max-content;
+    background-color: mintcream;
+    font-weight: 700;
+    padding-left: 100%;
+    /* show the marquee just outside the paragraph */
+    will-change: transform;
+    animation: marquee 30s linear infinite;
+    @include rwd('tiny') {
+    animation: marquee2 20s linear infinite;
+    }
+    @include rwd('ssm') {
+      animation: marquee2 20s linear infinite;
+    }
+    @include rwd('sm') {
+      animation: marquee2 20s linear infinite;
+    }
+    @include rwd('md') {
+      animation: marquee3 23s linear infinite;
+    }
+    &:hover {
+      animation-play-state: paused
+    }
+  }
 }
 
-.nav-bg {
-  @include rwd('tiny') {
-    display: none;
-  }
-  @include rwd(ssm) {
-    display: none;
-  }
-  @include rwd(sm) {
-    display: none;
-  }
-  @include rwd(md) {
-    display: none;
-  }
-  @include rwd(lg) {
-    display: flex;
-  }
-  @include rwd(xl) {
-    display: flex;
+
+@keyframes marquee {
+  0% { transform: translate(100%, 0); }
+  100% { transform: translate(-105%, 0); }
+}
+
+@keyframes marquee2 {
+  0% { transform: translate(50%, 0); }
+  100% { transform: translate(-110%, 0); }
+}
+
+@keyframes marquee3 {
+  0% { transform: translate(80%, 0); }
+  100% { transform: translate(-110%, 0); }
+}
+
+/* Respect user preferences about animations */
+
+@media (prefers-reduced-motion: reduce) {
+  .marquee span {
+    animation-iteration-count: 1;
+    animation-duration: 0.01; 
+    /* instead of animation: none, so an animationend event is 
+     * still available, if previously attached.
+     */
+    width: auto;
+    padding-left: 0;
   }
 }
 
-.bg-img {
-  background-image: url(../img/watercolor-background.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+.bd-radiustop-30 {
+  border-radius: 30px 30px 0 0;
 }
 
 .Isometric {
   max-width: 100%;
-  width: 220px;
-  height: 220px;
-  @include rwd(md) {
-    width: 220px;
-    height: 220px;
-  }
-  @include rwd(lg) {
-    width: 220px;
-    height: 220px;
-  }
-  @include rwd(xl) {
-    width: 220px;
-    height: 220px;
-  }
+  width: 230px;
+  height: 230px;
 }
 
 .border-4 {
   border: 4px solid #2B8099;
-  background-color: #f0f8ffc5;
+}
+
+.scrollTop {
+  position: fixed;
+  right: 8%;
+  bottom: 10px;
+  background-color: #5f9ea0;
+  border-radius: 50%;
+  opacity: 0;
+  cursor: pointer;
+  z-index: 999;
+  transition: all 0.4s ease-in-out 0s;
+  img {
+    width: 48px;
+  }
 }
 
 .navbar-brand {
@@ -382,24 +406,9 @@ h1, h2, h3, h4, h5, h6, p {
   }
 }
 
-.btn-group{
-  @include rwd('tiny') {
-    display: block;
-  }
-  @include rwd(md) {
-    display: block;
-  }
-  @include rwd(lg) {
-    display: none;
-  }
-  @include rwd(xl) {
-    display: none;
-  }
-}
-
 .section-item-icon {
-  width: 7rem;
-  height: 7rem;
+  width: 6rem;
+  height: 6rem;
 }
 
 .item4-icon {
@@ -426,11 +435,11 @@ h1, h2, h3, h4, h5, h6, p {
       transform: translateX(-50%) scale(.8);
       margin-top: 0px;
       margin-bottom: 0px;
-      width: 220px;
-      height: 220px;
+      width: 230px;
+      height: 230px;
       border-radius: 100%;
       text-align: center;
-      background-color: rgba(0, 0, 0, 0.5);
+      background-color: rgba(0,0,0,0.5);
       /*background dotted*/
       transition: all 0.5s linear;
       filter: alpha(opacity=0);
@@ -442,9 +451,6 @@ h1, h2, h3, h4, h5, h6, p {
         opacity: 1;
       }
       @include rwd('sm') {
-        opacity: 1;
-      }
-      @include rwd('md') {
         opacity: 1;
       }
       .text-white{
@@ -461,9 +467,6 @@ h1, h2, h3, h4, h5, h6, p {
         @include rwd('sm') {
           opacity: 1;
         }
-        @include rwd('md') {
-          opacity: 1;
-        }
       }
     }
   }
@@ -472,45 +475,23 @@ h1, h2, h3, h4, h5, h6, p {
     transition: all 0.5s ease-in-out;
   }
   &:hover{
-    @include rwd(lg) {
-      img {
-        transform: scale(1);
-        filter: grayscale(0.6);
-      }
-      a {
-        h2 {
-          filter: alpha(opacity=100);
+    img {
+      transform: scale(1);
+      filter: grayscale(0.6);
+    }
+    a {
+      h2 {
+        filter: alpha(opacity=100);
+        opacity: 1;
+        .text-white {
+          transform: scale(1);
+          transition: all 0.5s linear;
           opacity: 1;
-          cursor: pointer;
-          .text-white {
-            transform: scale(1);
-            transition: all 0.5s linear;
-            opacity: 1;
-          }
         }
       }
     }
-    @include rwd(xl) {
-      img {
-        transform: scale(1);
-        filter: grayscale(0.6);
-      }
-      a {
-        h2 {
-          filter: alpha(opacity=100);
-          opacity: 1;
-          .text-white {
-            transform: scale(1);
-            transition: all 0.5s linear;
-            opacity: 1;
-          }
-        }
-      }
-    }
-
   }
 }
-
 
 .search {
   max-width: 100%;
@@ -521,78 +502,3 @@ h1, h2, h3, h4, h5, h6, p {
     transform: scale(1.2);
   }
 }
-
-.scrollTop {
-  position: fixed;
-  right: 8%;
-  bottom: 10px;
-  background-color: #FCFCFC;
-  padding: 15px;
-  opacity: 0;
-  cursor: pointer;
-  z-index: 999;
-  transition: all 0.4s ease-in-out 0s;
-  a {
-    color: #272727;
-    font-size: 18px;
-  }
-}
-
-
-// $my-primary:       #2B8099;
-// $my-secondary:     #59C0C5;
-// $my-third:         #A8E0CA;
-// $my-fore:         #EEF1EA;
-// $my-five:         #FCFCFC;
-// $my-six:         #E9E9E9;
-
-
-// $theme-colors: (
-//   "primary": $my-primary,
-//   "secondary": $my-secondary,
-//   "third": $my-third,
-//   "fore": $my-fore,
-//   "five": $my-five,
-//   "six": $my-six,
-//   "success": $green-300,
-//   "warning": $yellow-300,
-//   "light-gray": $gray-300,
-//   "dark-gray": $gray-700,
-// );
-
-// $utilities: (
-//   "opacity": (
-//     property: opacity,
-//     responsive: true,
-//     values: (
-//       0: 0,
-//       10: .1,
-//       20: .2,
-//       25: .25,
-//       50: .5,
-//       60: .6,
-//       75: .75,
-//       80: .8,
-//       100: 1,
-//     )
-//   )
-// );
-
-// $utilities: (
-//   "opacity": (
-//     property: opacity,
-//     responsive: true,
-//     stat: hover,
-//     values: (
-//       0: 0,
-//       10: .1,
-//       20: .2,
-//       25: .25,
-//       50: .5,
-//       60: .6,
-//       75: .75,
-//       80: .8,
-//       100: 1,
-//     )
-//   )
-// );
