--- a/src/scss/_index4.scss
+++ b/src/scss/_index4.scss
@@ -115,7 +115,6 @@ body {
     @include rwd(ssm){
       flex: 0 0 auto;
       width: 50%;
-
     }
     @include rwd(md) {
       &:hover{
@@ -123,7 +122,7 @@ body {
           box-shadow: inset 0 0 0 1rem var(--hover);
         }
         button{
-          background-color: var(--hover) ;
+          background-color: adjust-hue($color: #2B8099, $degrees: 10) ;
           color: $gray-100;
         }
       }
@@ -134,7 +133,7 @@ body {
           box-shadow: inset 0 0 0 1rem var(--hover);
         }
         button{
-          background-color: var(--hover) ;
+          background-color: adjust-hue($color: #2B8099, $degrees: 10) ;
           color: $gray-100;
         }
       }
@@ -145,7 +144,7 @@ body {
           box-shadow: inset 0 0 0 1rem var(--hover);
         }
         button{
-          background-color: var(--hover) ;
+          background-color: adjust-hue($color: #2B8099, $degrees: 10);
           color: $gray-100;
         }
       }
@@ -212,7 +211,7 @@ body {
   display: inline-block;
   font-weight: bold;
   line-height: 1.5;
-  color: $gray-100;
+  color: var(--color);
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
@@ -224,10 +223,15 @@ body {
   border-radius: 0.25rem;
   transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
   &:hover {
-    color: white;
+    color: var(--hover);
   }
 }
 
+.scoll {
+  &:hover {
+    transform: scale(1.2);
+  }
+}
 
 .btn2 {
   font-weight: 400;
@@ -364,10 +368,10 @@ h1, h2, h3, h4, h5, h6, p {
   .logo {
     width: 80%;
     @include rwd(sm) {
-      width: 500px;
+      width: 400px;
     }
     @include rwd(md) {
-      width: 600px;
+      width: 500px;
     }
     @include rwd(lg) {
       width: 600px;
@@ -489,5 +493,36 @@ h1, h2, h3, h4, h5, h6, p {
   transition: all 0.3s ease-in-out;
   &:hover {
     transform: scale(1.2);
+  }
+}
+
+
+.btn-group{
+  @include rwd('tiny') {
+    display: block;
+  }
+  @include rwd(md) {
+    display: none;
+  }
+  @include rwd(lg) {
+    display: none;
+  }
+  @include rwd(xl) {
+    display: none;
+  }
+}
+
+.nav-bg {
+  display: none;
+  @include rwd(md) {
+    display: flex;
+  }
+  @include rwd(lg) {
+    display: flex;
+    justify-content: center;
+  }
+  @include rwd(xl) {
+    display: flex;
+    justify-content: center;
   }
 }
