--- a/src/scss/_index4.scss
+++ b/src/scss/_index4.scss
@@ -6,6 +6,7 @@ $colors: (
   Lotion: #FCFCFC, 
   BrightGray: #E9E9E9,
   fill: cadetblue,
+  OrchidPurple: #814794,
 );
 
 @each $button, $color in $colors {
@@ -68,6 +69,7 @@ html, body {
 }
 body {
   display: flex; /*使物件依序排列*/
+  justify-content: center;
   flex-direction: column; /*使物件垂直排列*/
   background-image: url(../img/background4.svg);
   background-size: cover;
@@ -75,8 +77,18 @@ body {
   background-position: center;
 }
 
+.wrapper-top {
+  flex-grow: 1; /*可佔滿垂直剩餘的空間*/
+}
+
 .wrapper {
-  flex-grow: 2; /*可佔滿垂直剩餘的空間*/
+  flex-grow: 3; /*可佔滿垂直剩餘的空間*/
+}
+
+.wrapper-middle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .side {
@@ -122,7 +134,7 @@ body {
           box-shadow: inset 0 0 0 1rem var(--hover);
         }
         button{
-          background-color: adjust-hue($color: #2B8099, $degrees: 10) ;
+          background-color: adjust-hue($color: #814794, $degrees: 10) ;
           color: $gray-100;
         }
       }
@@ -133,7 +145,7 @@ body {
           box-shadow: inset 0 0 0 1rem var(--hover);
         }
         button{
-          background-color: adjust-hue($color: #2B8099, $degrees: 10) ;
+          background-color: adjust-hue($color: #814794, $degrees: 10) ;
           color: $gray-100;
         }
       }
@@ -144,7 +156,7 @@ body {
           box-shadow: inset 0 0 0 1rem var(--hover);
         }
         button{
-          background-color: adjust-hue($color: #2B8099, $degrees: 10);
+          background-color: adjust-hue($color: #814794, $degrees: 10);
           color: $gray-100;
         }
       }
@@ -401,7 +413,14 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 
-
+.nav-bar {
+  .col {
+    border-right: 2px solid #2B8099;
+  }
+  .col:last-child {
+    border-right: 0;
+  }
+}
 
 
 .item4-icon {
