--- a/src/scss/_index4.scss
+++ b/src/scss/_index4.scss
@@ -69,7 +69,6 @@ html, body {
 }
 body {
   display: flex; /*使物件依序排列*/
-  justify-content: center;
   flex-direction: column; /*使物件垂直排列*/
   background-image: url(../img/background4.svg);
   background-size: cover;
@@ -83,12 +82,6 @@ body {
 
 .wrapper {
   flex-grow: 3; /*可佔滿垂直剩餘的空間*/
-}
-
-.wrapper-middle {
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .side {
@@ -171,6 +164,11 @@ body {
   }
   a:nth-child(1), a:nth-child(2) {
     @include rwd(ssm) {
+      button {
+        color: #141414;
+      }
+    }
+    @include rwd(sm) {
       button {
         color: #141414;
       }
@@ -414,6 +412,16 @@ h1, h2, h3, h4, h5, h6, p {
 
 
 .nav-bar {
+  display: none;
+  @include rwd(md){
+    display: flex;
+  }
+  @include rwd(lg){
+    display: flex;
+  }
+  @include rwd(xl){
+    display: flex;
+  }
   .col {
     border-right: 2px solid #2B8099;
   }
